# fsmall

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
examples/: lightswitch_mealy.rs  lightswitch_moore.rs
src/: lib.rs
