[package]
name = "fsmall"
version = "0.1.0"
edition = "2021"
description = "Small finite state machine library with no allocations, supports Mealy and Moore"
readme = "README.md"
license = "MIT"
repository = "https://github.com/jpnt/fsmall"
keywords = ["fsm", "state-machine", "mealy", "moore", "no-std"]
categories = ["algorithms", "embedded", "no-std"]

[dependencies]
# Z-z-zeeeroooooooooo

[[example]]
name = "lightswitch_mealy"

[[example]]
name = "lightswitch_moore"
